Increased window size on demo template.

--- a/pixels/templates/index.html
+++ b/pixels/templates/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
+<div id="mapid" style="top: 15%; left: 25%; right:25%; bottom: 15%; max-width: 2000px; position: absolute;"></div>
 
 <script>
 	var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
