--- a/pixels/templates/index.html
+++ b/pixels/templates/index.html
@@ -243,8 +243,8 @@
   var last_month = d.getFullYear() + '-' +
     ((''+month).length<2 ? '0' : '') + month + '-' +
     ((''+day).length<2 ? '0' : '') + day;
-  $('#startDate').val(today);
-  $('#endDate').val(last_month);
+  $('#startDate').val(last_month);
+  $('#endDate').val(today);
 	// Baselayer
 	var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 18
@@ -341,6 +341,8 @@
 		    $([document.documentElement, document.body]).animate({
 		        scrollTop: $(".results").offset().top
 		    }, 1000);
+        // Clear current result.
+        $('.query-result').html('<p>Waiting for results...</p>');
 				// Request pixels.
 				$.ajax({
 				  type: "POST",
