--- a/pixels/templates/index.html
+++ b/pixels/templates/index.html
@@ -166,7 +166,7 @@
 				<div class="form-group row">
 			    <label for="inputEmail3" class="col-sm-2 col-form-label">Maximum Cloudy Pixel Percentage</label>
 			    <div class="col-sm-10">
-			      <input type="number" class="form-control" id="startDate" value="100" name="max_cloud_cover_percentage">
+			      <input type="number" step="0.01" class="form-control" id="startDate" value="100" name="max_cloud_cover_percentage">
 			    </div>
 			  </div>
 				<!-- Bands -->
