Added CSV export as option to pixel grabber.

--- a/pixels/templates/index.html
+++ b/pixels/templates/index.html
@@ -135,6 +135,12 @@
 			            NPZ- Numpy arrays packed into a compressed npz file.
 			          </label>
 			        </div>
+              <div class="form-check">
+			          <input class="form-check-input" type="radio" name="format" id="CSV" value="CSV">
+			          <label class="form-check-label" for="format">
+			            CSV - Pixel values as points in a zipped csv file.
+			          </label>
+			        </div>
 			      </div>
 			    </div>
 			  </fieldset>
