--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,16 +97,28 @@
 			    <div class="row">
 			      <legend class="col-form-label col-sm-2 pt-0">Mode</legend>
 			      <div class="col-sm-10">
+              <div class="form-check">
+			          <input class="form-check-input" type="radio" name="mode" id="modeRadios1" value="search_only">
+			          <label class="form-check-label" for="modeRadios">
+			            Search Only
+			          </label>
+			        </div>
 			        <div class="form-check">
-			          <input class="form-check-input" type="radio" name="composite" id="modeRadios1" value="false" checked>
+			          <input class="form-check-input" type="radio" name="mode" id="modeRadios2" value="latest_pixel" checked>
 			          <label class="form-check-label" for="modeRadios">
 			            Latest Pixel
 			          </label>
 			        </div>
 			        <div class="form-check">
-			          <input class="form-check-input" type="radio" name="composite" id="modeRadios2" value="true">
+			          <input class="form-check-input" type="radio" name="mode" id="modeRadios3" value="composite">
 			          <label class="form-check-label" for="modeRadios">
 			            Composite
+			          </label>
+			        </div>
+              <div class="form-check">
+			          <input class="form-check-input" type="radio" name="mode" id="modeRadios4" value="composite_incremental">
+			          <label class="form-check-label" for="modeRadios">
+			            Composite Incremental
 			          </label>
 			        </div>
 			      </div>
@@ -158,12 +170,6 @@
 			        <input class="form-check-input" type="checkbox" id="clip_to_geom" name="clip_to_geom">
 			        <label class="form-check-label" for="clip_to_geom">
 			          Clip images to geometry
-			        </label>
-			      </div>
-            <div class="form-check">
-			        <input class="form-check-input" type="checkbox" id="searchOnly" name="search_only">
-			        <label class="form-check-label" for="searchOnly">
-			          Search Only
 			        </label>
 			      </div>
 			    </div>
@@ -332,10 +338,6 @@
 					if (x.name == 'max_cloud_cover_percentage') {
 						x.value = Number(x.value)
 					}
-					if (x.name == 'composite') {
-							data['composite'] = x.value == 'true' ? true : false
-							data['latest_pixel'] = !data['composite']
-					}
 					if (x.value === 'true' || x.value == 'on'){
 						x.value = true
 					}
@@ -349,7 +351,7 @@
 					data['bands'] = bands;
 				}
 				// Set delay mode.
-				if(!data['search_only']) {
+				if(data['mode'] != 'search_only') {
 					data['delay'] = true;
 				}
 				// Set geometry.
@@ -374,6 +376,9 @@
 				  success: function(response){
 						$('.query-result').html('<pre><code>' + JSON.stringify(response, null, 4) + '</pre></code>').each(function (i, e) {
 						    hljs.highlightBlock(e);
+                // Wrap link into a tag.
+                var link = $('span.hljs-string:contains("http")').html().split('"')[1]
+                $('span.hljs-string:contains("http")').html('<a target="_blank" rel="noopener noreferrer" href="' + link + '">\"' + link + '\"</a>');
 						});
 					},
 					error: function(err, code, msg){
